fix(masthead): z-index to title

--- a/packages/styles/scss/components/masthead/_masthead.scss
+++ b/packages/styles/scss/components/masthead/_masthead.scss
@@ -266,15 +266,12 @@ $search-transition-timing: 95ms;
   }
 
   .#{$prefix}--header__nav {
-    li {
-      z-index: 0;
-    }
-
     a.#{$prefix}--header__menu-item {
       @include masthead-top-nav-link;
     }
 
     .#{$prefix}--header__menu-title[role='menuitem'][aria-expanded='true'] {
+      z-index: 0;
       background-color: $ui-01;
       + .#{$prefix}--header__menu {
         background-color: $ui-02;
